scalac plugin deps

--- a/.pom.yml
+++ b/.pom.yml
@@ -1,3 +1,3 @@
 !!org.twdata.maven.yamlpom.SyncFile
-xml: {md5: 9633CD28F79C8643C6730CDCAA8E87AA, syncBy: dwayne, timestamp: 1249329842000}
-yaml: {md5: 3DC22BE1BD881A9CCFC1AB6A6BB3B4BE, syncBy: dwayne, timestamp: 1249329842000}
+xml: {md5: 9633CD28F79C8643C6730CDCAA8E87AA, syncBy: gatoatigrado, timestamp: 1249339586000}
+yaml: {md5: 3DC22BE1BD881A9CCFC1AB6A6BB3B4BE, syncBy: gatoatigrado, timestamp: 1249339586000}
